fix text align

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -74,6 +74,7 @@ main p {
   font-size: 1.1rem;
   margin-bottom: 20px;
   flex: 1;
+  text-align: left;
 }
 
 footer {
